Update so the new plugin versions can be used with Java 8