@@ -25,6 +25,7 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Paths;
 import org.apache.commons.io.ByteOrderMark;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.io.input.BOMInputStream;
 import static org.assertj.core.api.Assertions.assertThat;
 import org.junit.Before;
@@ -92,7 +93,7 @@ public class FinalReportTest {
                                               ByteOrderMark.UTF_32BE)) {
       ByteOrderMark bom = bomInputStream.getBOM();
       Charset charset = bom != null ? Charset.forName(bom.getCharsetName()) : defaultCharset;
-      byte[] bytes = bomInputStream.readAllBytes();
+      byte[] bytes = IOUtils.toByteArray(bomInputStream);
       return new String(bytes, charset);
     }
   }
